--- a/front-end/tutorial-canciones/src/app/cancion/cancion-detail/cancion-detail.component.html
+++ b/front-end/tutorial-canciones/src/app/cancion/cancion-detail/cancion-detail.component.html
@@ -1,60 +1,64 @@
-<div class="container">
-
-  <div class="row">
-    <div class="col-12 text-center mb-2" >
-      <label class="fs-4 fw-bold">Canción: {{cancion?.titulo}}</label>
-      <nav class="navbar navbar-expand-sm ">
-        <div class="navbar navbar-collapse ">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item dropdown" id="compartir_album" *ngIf="cancion && cancion.usuario">
-              <img class="iconos" src="/assets/send.png" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false" (click)="compartirCancion()" title="Compartir album" />
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <form>
-                  <label class="dropdown-item ionic-item" style="text-align: center;">Compartir a usuarios</label>
-                  <div class="dropdown-divider"></div>
-                  <div *ngIf="userList.length > 0; else notUsers">
-                    <div *ngFor="let user of userList" class="dropdown-item"><input type="checkbox" [value]="user.id"
-                        (change)="onCheckboxChange($event)"> {{user.nombre}}</div>
-                  </div>
-                  <ng-template #notUsers><label class="dropdown-item" style="text-align: center; color: gray;">No hay
-                      usuarios</label></ng-template>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item "                      class="btn btn-primary"
-                   (click)="onSubmitCompartirCancion()">Enviar</a>
-                </form>
-              </div>
-            </li>
-            <li class="nav-item" *ngIf="cancion && cancion.usuario">
-              <img class="iconos" id='editar_cancion' (click)="goToEdit()" src="/assets/edit.png" alt="crear" />
-            </li>
-            <li class="nav-item" *ngIf="cancion && cancion.usuario">
-              <img class="iconos" id='eliminar_cancion' type="button" (click)="eliminarCancion()" src="/assets/delete.png"
-                alt="crear" />
-            </li>
-          </ul>
-        </div>
-      </nav>
+<div class="card ionic-card" style="background-color: white">
+  <div class="card-header ionic-card-header">
+    <div class="row">
+      <div class="col-12 text-center mb-2" >
+        <label class="fs-4 fw-bold">
+          <h1>
+          Canción: {{cancion?.titulo}}
+          </h1>
+        </label>
+        <nav class="navbar navbar-expand-sm ">
+          <div class="navbar navbar-collapse ">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item dropdown" id="compartir_album" *ngIf="cancion && cancion.usuario">
+                <img class="iconos" src="/assets/send.png" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" (click)="compartirCancion()" title="Compartir album" />
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <form>
+                    <label class="dropdown-item ionic-item" style="text-align: center;">Compartir a usuarios</label>
+                    <div class="dropdown-divider"></div>
+                    <div *ngIf="userList != null && userList.length > 0; else notUsers">
+                      <div *ngFor="let user of userList" class="dropdown-item">
+                        <input type="checkbox" [value]="user.id" (change)="onCheckboxChange($event)"> {{user.nombre}}
+                      </div>
+                    </div>
+                    <ng-template #notUsers>
+                      <label class="dropdown-item" style="text-align: center; color: gray;">
+                        <h1>No hay usuarios</h1>
+                      </label>
+                    </ng-template>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" class="btn btn-primary" (click)="onSubmitCompartirCancion()">Enviar</a>
+                  </form>
+                </div>
+              </li>
+              <li class="nav-item" *ngIf="cancion && cancion.usuario">
+                <img class="iconos" id='editar_cancion' (click)="goToEdit()" src="/assets/edit.png" alt="crear" />
+              </li>
+              <li class="nav-item" *ngIf="cancion && cancion.usuario">
+                <img class="iconos" id='eliminar_cancion' type="button" (click)="eliminarCancion()" src="/assets/delete.png" alt="crear" />
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
     </div>
   </div>
-
   <div class="row mt-2">
-    <div class="col-6">
-      <div class="card">
-        <div class="card-body">
+    <div class="col-12 col-sm-6 col-md-6">
+      <div class="card ionic-card">
+        <div class="card-body ionic-card-body">
           <p class="my-0"><span class="fw-bold">Duración: </span> <span class="text-capitalize">{{cancion?.minutos}}:{{cancion?.segundos}}</span></p>
         </div>
       </div>
     </div>
     <div class="col-6">
-      <div class="card">
-        <div class="card-body">
+      <div class="card ionic-card">
+        <div class="card-body ionic-card-body">
           <p class="my-0"><span class="fw-bold">Intérpretes: </span> <span class="text-capitalize">{{cancion?.interprete}}</span></p>
         </div>
       </div>
     </div>
   </div>
-
   <div class="row">
     <div class="col-12 mt-3 mb-2 ms-2">
       <h5>Álbumes</h5>
