--- a/front-end/tutorial-canciones/src/app/cancion/cancion-detail/cancion-detail.component.html
+++ b/front-end/tutorial-canciones/src/app/cancion/cancion-detail/cancion-detail.component.html
@@ -11,7 +11,7 @@
           <div class="navbar navbar-collapse ">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item dropdown" id="compartir_album" *ngIf="cancion && cancion.usuario">
-                <img class="iconos" src="/assets/send.png" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" (click)="compartirCancion()" title="Compartir album" />
+                <img class="iconos" src="/assets/send.svg" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" (click)="compartirCancion()" title="Compartir album" />
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <form>
                     <label class="dropdown-item ionic-item" style="text-align: center;">Compartir a usuarios</label>
@@ -32,10 +32,10 @@
                 </div>
               </li>
               <li class="nav-item" *ngIf="cancion && cancion.usuario">
-                <img class="iconos" id='editar_cancion' (click)="goToEdit()" src="/assets/edit.png" alt="crear" />
+                <img class="iconos" id='editar_cancion' (click)="goToEdit()" src="/assets/edit.svg"c alt="crear" />
               </li>
               <li class="nav-item" *ngIf="cancion && cancion.usuario">
-                <img class="iconos" id='eliminar_cancion' type="button" (click)="eliminarCancion()" src="/assets/delete.png" alt="crear" />
+                <img class="iconos" id='eliminar_cancion' type="button" (click)="eliminarCancion()" src="/assets/delete.svg" alt="crear" />
               </li>
             </ul>
           </div>
