Integracion obtener comentarios

--- a/front-end/tutorial-canciones/src/app/app-header/header/header.component.html
+++ b/front-end/tutorial-canciones/src/app/app-header/header/header.component.html
@@ -4,7 +4,7 @@
 </div>
 
 <div class="wrapper">
-  <nav id="sidebar">
+  <nav id="sidebar" class="active">
     <div class="sidebar-header">
       <h1>Menu</h1>
     </div>
