--- a/front-end/tutorial-canciones/src/app/album/album-list/album-list.component.html
+++ b/front-end/tutorial-canciones/src/app/album/album-list/album-list.component.html
@@ -75,7 +75,7 @@
       </div>
     </div>
     <div class="col-12 col-sm-12 col-md-8 col-lg-8 col-lg-8">
-      <app-album-detail (deleteAlbum)="eliminarAlbum()" [album]="albumSeleccionado"></app-album-detail>
+      <app-album-detail (deleteAlbum)="eliminarAlbum()" [album]="albumSeleccionado" [comentarios]= "comentarios"></app-album-detail>
     </div>
   </div>
 </div>
